feat: add processing event file downloads
